# orch

./: .gitignore  .orch.example.yml  .orch.yml  .orchestrator.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  config.example.yml  opencode.json  specs.md
.github/workflows/: integration-tests.yml  orch-review.yml  release.yml
.opencode/: config.json
Formula/: orch.rb
docs/content/: agents.md  cli.md  getting-started.md  review-agent.md
prompts/: agent_memory_entry.md  agent_message.md  agent_system.md  allowed_tools.md  review_system.md  review_task.md
scripts/: lib.sh  poll.sh  serve.sh
src/: cmd.rs  cmd_cache.rs  db.rs  home.rs  main.rs  parser.rs  security.rs  sidecar.rs  template.rs  tmux.rs
src/backends/: github.rs  mod.rs
src/channels/: capture.rs  discord.rs  github.rs  mod.rs  notification.rs  telegram.rs  tmux.rs  transport.rs
src/cli/: cost.rs  dashboard.rs  job.rs  mod.rs  service.rs  task.rs  tree.rs
src/config/: mod.rs
src/engine/: commands.rs  internal_tasks.rs  jobs.rs  mod.rs  router.rs  runner.rs  tasks.rs
src/engine/runner/: agent.rs  context.rs  mod.rs  (+3 more)
src/github/: backoff.rs  cli.rs  http.rs  mod.rs  projects.rs  types.rs
tests/: integration_agents.rs  orchestrator.bats
tests/fixtures/: claude_error_rate_limit.json  claude_success.json  codex_model_unsupported.jsonl  codex_rate_limit.jsonl  codex_success.jsonl  codex_usage_limit.jsonl  opencode_model_not_found.jsonl  opencode_permission_denied.jsonl  opencode_rate_limit.jsonl  opencode_success.jsonl  route-prompt-186.txt  route-response-markdown.json  route-response-object.json  route-response-string.json
(+4 files in other folders)
