[package]
name = "orch"
version = "0.1.0"
edition = "2021"
description = "Orch — The Agent Orchestrator (Rust core)"
license = "MIT"
repository = "https://github.com/gabrielkoerich/orch"

[[bin]]
name = "orch"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Cron
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# SHA256 for dedup hashing and webhook signatures
sha2 = "0.10"

# URL encoding for label names
urlencoding = "2"

# Regex for leak detection
regex = "1"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# Directory helpers
dirs = "6"

# File watching for config hot reload
notify = "7"

# SQLite for internal tasks
rusqlite = { version = "0.31", features = ["bundled"] }

# Command discovery for agents
which = "7"

# HTTP server for webhooks
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# HMAC for webhook signature verification
hmac = "0.12"

# Async combinators (FuturesUnordered for concurrent routing)
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
